--- a/conf/index.html
+++ b/conf/index.html
@@ -22,16 +22,17 @@ font-family:微软雅黑,sans-serif;
 </head>
 <body>
 <div id="main">
-<div align="center">恭喜，LNMP最新源码安装成功！</div>
 <br>
-<h2><a href="http://blog.linuxeye.com/31.html" target="_blank">LNMP最新源码一键安装脚本</a>Linux+Nginx+MySQL+PHP+Pureftpd+User manager for PureFTPd+phpMyAdmin，添加虚拟主机请执行/root/lnmp/vhost.sh脚本。脚本中用到的软件包大多最新稳定版本,修复了一些安全性问题。适用于CentOS/RadHat 5/6<br></h2>
+<div align="center"><h3>恭喜，LNMP最新源码安装成功！<h3></div>
+<h2><a href="http://blog.linuxeye.com/31.html" target="_blank" class="links">LNMP最新源码一键安装脚本</a> <a href="http://www.linuxeye.com/" target="_blank">Linux</a>+Nginx+MySQL+PHP+Pureftpd+User manager for PureFTPd+phpMyAdmin，添加虚拟主机请执行/root/lnmp/vhost.sh脚本。脚本中用到的软件包大多最新稳定版本,修复了一些安全性问题（安装之前会执行<a target="_blank" href="http://blog.linuxeye.com/30.html">初始化安全脚本init.sh</a>）。适用于CentOS/RadHat 5/6<br></h2>
 
-<p>查看本地环境：</span><a href="/tz.php" target="_blank" class="links">探针</a>　<a href="/phpinfo.php" target="_blank" class="links">phpinfo</a>　<a href="/ftp" target="_blank" class="links">ftp manager</a>  <a href="/phpMyAdmin/" target="_blank" class="links">phpMyAdmin</a>(为了更安全，建议将ftp和phpMyAdmin目录重命名为不容易猜到的目录！)</p>
+<p>Github地址：<a target="_blank" class="links" href="https://github.com/lj2007331/lnmp">https://github.com/lj2007331/lnmp</a></p>
+<p>查看本地环境：</span><a href="/tz.php" target="_blank" class="links">探针</a>  <a href="/phpinfo.php" target="_blank" class="links">phpinfo</a>  <a href="/ftp" target="_blank" class="links">ftp manager</a>  <a href="/phpMyAdmin/" target="_blank" class="links">phpMyAdmin</a>(为了更安全，建议将ftp和phpMyAdmin目录重命名！)</p>
 
 <p>更多LNMP最新源码一键安装脚本信息请访问： <a href="blog.linuxeye.com/31.html" target="_blank">http://blog.linuxeye.com/31.html</a></p>
 <p>LNMP最新源码一键安装脚本问题反馈请加QQ群： 235258658</p>
 
-<div align="center"><h3><a href="blog.linuxeye.com/31.html" target="_blank">LNMP最新源码一键安装脚本</a> by <a href="blog.linuxeye.com/" target="_blank">Linux运维笔记</a></h3></div>
+<div align="center"><h3><a href="http://blog.linuxeye.com/31.html" target="_blank">LNMP最新源码一键安装脚本</a> by <a href="http://blog.linuxeye.com/" target="_blank">Linux运维笔记</a></h3></div>
 </div>
 </body>
 </html>
