--- a/conf/index.html
+++ b/conf/index.html
@@ -4,7 +4,7 @@
 <title>LNMP最新源码一键安装脚本</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content="lnmp,lnmp一键安装包,一键安装包">
-<meta name="description" content="您已成功安装LNMP一键安装包！">
+<meta name="description" content="您已成功安装LNMP最新源码一键安装包！">
 <style type="text/css">
 <!--
 body {
