--- a/conf/index.html
+++ b/conf/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>LNMP最新源码一键安装脚本</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="keywords" content="lnmp,lnmp一键安装包,一键安装包">
 <meta name="description" content="您已成功安装LNMP最新源码一键安装包！">
 <style type="text/css">
