LNMP for Ubuntu 12+

--- a/conf/index.html
+++ b/conf/index.html
@@ -23,8 +23,8 @@ font-family:微软雅黑,sans-serif;
 <body>
 <div id="main">
 <br>
-<div align="center"><h3>恭喜，LNMP最新源码安装成功！<h3></div>
-<h2><a href="http://blog.linuxeye.com/31.html" target="_blank" class="links">LNMP最新源码一键安装脚本</a> <a href="http://www.linuxeye.com/" target="_blank">Linux</a>+Nginx+MySQL+MariaDB+PHP+Pureftpd+User manager for PureFTPd+phpMyAdmin，添加虚拟主机请执行/root/lnmp/vhost.sh脚本。脚本中用到的软件包大多最新稳定版本,修复了一些安全性问题（安装之前会执行<a target="_blank" href="http://blog.linuxeye.com/30.html">初始化安全脚本init.sh</a>）。适用于CentOS/RadHat 5/6<br></h2>
+<div align="center"><h3>Congratulations, lnmp安装成功！<h3></div>
+<h2><a href="http://blog.linuxeye.com/31.html" target="_blank" class="links">LNMP最新源码一键安装脚本</a> <a href="http://www.linuxeye.com/" target="_blank">Linux</a>+Nginx+MySQL+MariaDB+PHP+Pureftpd+User manager for PureFTPd+phpMyAdmin，添加虚拟主机请执行/root/lnmp/vhost.sh脚本。脚本中用到的软件包大多最新稳定版本,修复了一些安全性问题（安装之前会执行<a target="_blank" href="http://blog.linuxeye.com/30.html">初始化安全脚本init.sh</a>）。适用于CentOS/RadHat 5+、Ubuntu 12+ <br></h2>
 
 <p>Github地址：<a target="_blank" class="links" href="https://github.com/lj2007331/lnmp">https://github.com/lj2007331/lnmp</a></p>
 <p>查看本地环境：</span><a href="/tz.php" target="_blank" class="links">探针</a>  <a href="/phpinfo.php" target="_blank" class="links">phpinfo</a>  <a href="/ftp" target="_blank" class="links">FTP Manager</a>  <a href="/phpMyAdmin/" target="_blank" class="links">phpMyAdmin</a>(为了更安全，建议将ftp和phpMyAdmin目录重命名！)</p>
