--- a/conf/index.html
+++ b/conf/index.html
@@ -26,7 +26,7 @@ font-family:微软雅黑,sans-serif;
 <div align="center"><h3>Congratulations, LNMP安装成功！<h3></div>
 <h2><a href="http://blog.linuxeye.com/31.html" target="_blank" class="links">LNMP最新源码一键安装脚本</a> <a href="http://www.linuxeye.com/" target="_blank">Linux</a>+Nginx/Tengine+MySQL/MariaDB+PHP+Pureftpd+User manager for PureFTPd+phpMyAdmin+redis+memcached+jemalloc/tcmalloc，添加虚拟主机请执行vhost.sh脚本。脚本中用到的软件包大多最新稳定版本,修复了一些安全性问题（安装之前会执行<a target="_blank" href="http://blog.linuxeye.com/30.html">初始化安全脚本init.sh</a>）。适用于CentOS/RedHat 5+、Debian 6+、Ubuntu 12+ <br></h2>
 <p>Github地址：<a target="_blank" class="links" href="https://github.com/lj2007331/lnmp">https://github.com/lj2007331/lnmp</a></p>
-<p>查看本地环境：</span><a href="/tz.php" target="_blank" class="links">探针</a>  <a href="/phpinfo.php" target="_blank" class="links">phpinfo</a>  <a href="/ftp" target="_blank" class="links">FTP Manager</a>  <a href="/phpMyAdmin/" target="_blank" class="links">phpMyAdmin</a>(为了更安全，建议将ftp和phpMyAdmin目录重命名！)</p>
+<p>查看本地环境：</span><a href="/tz.php" target="_blank" class="links">探针</a>  <a href="/phpinfo.php" target="_blank" class="links">phpinfo</a>  <a href="/ftp" target="_blank" class="links">FTP Manager</a> <a href="/xcache" target="_blank" class="links">xcache</a> <a href="/phpMyAdmin/" target="_blank" class="links">phpMyAdmin</a>(为了更安全，建议将ftp和phpMyAdmin目录重命名！)</p>
 <p>更多LNMP最新源码一键安装脚本信息请访问： <a href="http://blog.linuxeye.com/31.html" target="_blank">http://blog.linuxeye.com/31.html</a></p>
 <p>LNMP最新源码一键安装脚本问题反馈请加QQ群： 235258658</p>
 <div align="center"><h3><a href="http://blog.linuxeye.com/31.html" target="_blank">LNMP最新源码一键安装脚本</a> by <a href="http://blog.linuxeye.com/" target="_blank">Linux运维笔记</a></h3></div>
