--- a/conf/index.html
+++ b/conf/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>LNMP最新源码一键安装脚本</title>
+<title>LNMP and LAMP setup script</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="keywords" content="lnmp,lnmp一键安装包,一键安装包">
-<meta name="description" content="您已成功安装LNMP最新源码一键安装包！">
+<meta name="keywords" content="lnmp,lamp,lnmp stack,lamp stack">
+<meta name="description" content="A complete lnmp/lamp/lanmp setup script for CentOS/Redhat Debian and Ubuntu">
 <style type="text/css">
 <!--
 body {
 color:#333333;
-font-family:微软雅黑,sans-serif;
+font-family:"Microsoft YaHei",sans-serif;
 }
 .links {color: #009900}
 #main {
@@ -23,13 +23,15 @@ font-family:微软雅黑,sans-serif;
 <body>
 <div id="main">
 <br>
-<div align="center"><h3>Congratulations, LNMP安装成功！<h3></div>
-<h2><a href="http://blog.linuxeye.com/31.html" target="_blank" class="links">LNMP最新源码一键安装脚本</a> <a href="http://www.linuxeye.com/" target="_blank">Linux</a>+Nginx/Tengine+MySQL/MariaDB/Percona+PHP+Pureftpd+User manager for PureFTPd+phpMyAdmin+redis+memcached+jemalloc/tcmalloc，添加虚拟主机请执行vhost.sh脚本。脚本中用到的软件包大多最新稳定版本,修复了一些安全性问题（安装之前会执行<a target="_blank" href="http://blog.linuxeye.com/30.html">初始化安全脚本init.sh</a>）。适用于CentOS/RedHat 5+、Debian 6+、Ubuntu 12+ <br></h2>
-<p>更多LNMP最新源码一键安装脚本信息请访问： <a href="http://blog.linuxeye.com/31.html" target="_blank">http://blog.linuxeye.com/31.html</a></p>
-<p>查看本地环境：</span><a href="/tz.php" target="_blank" class="links">探针</a>  <a href="/phpinfo.php" target="_blank" class="links">phpinfo</a>  <a href="/ftp" target="_blank" class="links">FTP Manager</a> <a href="/xcache" target="_blank" class="links">xcache</a> <a href="/phpMyAdmin/" target="_blank" class="links">phpMyAdmin</a>(为了更安全，建议将ftp和phpMyAdmin目录重命名！)</p>
-<p>Github项目地址：<a target="_blank" class="links" href="https://github.com/lj2007331/lnmp">https://github.com/lj2007331/lnmp</a></p>
-<p>LNMP最新源码一键安装脚本问题反馈请加QQ群： 235258658</p>
-<div align="center"><h3><a href="http://blog.linuxeye.com/31.html" target="_blank">LNMP一键安装包</a> by <a href="http://blog.linuxeye.com/" target="_blank">Linux运维笔记</a></h3></div>
+<div align="center"><h2>Congratulations, LNMP a successful installation!<h2></div>
+<h3><a href="http://blog.linuxeye.com/31.html" target="_blank" class="links">LNMP stack</a> <a href="http://www.linuxeye.com/" target="_blank">Linux</a>+Nginx/Tengine+MySQL/MariaDB/Percona+PHP+Pureftpd+phpMyAdmin+redis+memcached+jemalloc/tcmalloc.<br></h3>
+<p><b>Check environment:&nbsp;&nbsp;</b> </span><a href="/proberv.php" target="_blank" class="links">Proberv</a>  <a href="/phpinfo.php" target="_blank" class="links">phpinfo</a>  <a href="/ftp" target="_blank" class="links">FTP Manager</a> <a href="/xcache" target="_blank" class="links">xcache</a> <a href="/phpMyAdmin/" target="_blank" class="links">phpMyAdmin</a></p>
+<p><b>For feedback, questions, and to follow the progress of the project:&nbsp;&nbsp;</b> <a target="_blank" class="links" href="https://github.com/lj2007331/lnmp">https://github.com/lj2007331/lnmp</a></p>
+<p><b>Author email:&nbsp;&nbsp;</b><a class="email" href="mailto:lj2007331@gmail.com">lj2007331@gmail.com</a></p>
+<p><b>Donate:</b></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PayPal:&nbsp;&nbsp;lj2007331@gmail.com</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;alipay:&nbsp;&nbsp;lj2007331@163.com</p>
+<div align="center"><h3><a href="http://blog.linuxeye.com/31.html" target="_blank">LNMP stack</a> by <a href="http://blog.linuxeye.com/" target="_blank">LinuxEye</a></h3></div>
 </div>
 </body>
 </html>
