change alipay address

--- a/conf/index.html
+++ b/conf/index.html
@@ -30,7 +30,7 @@ font-family:"Microsoft YaHei",sans-serif;
 <p><b>Author email:&nbsp;&nbsp;</b><a class="email" href="mailto:lj2007331@gmail.com">lj2007331@gmail.com</a></p>
 <p><b>Donate:</b></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PayPal:&nbsp;&nbsp;lj2007331@gmail.com</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;alipay:&nbsp;&nbsp;lj2007331@163.com</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;alipay:&nbsp;&nbsp;lj2007331@gmail.com</p>
 <div align="center"><h3><a href="http://blog.linuxeye.com/31.html" target="_blank">LNMP stack</a> by <a href="http://blog.linuxeye.com/" target="_blank">LinuxEye</a></h3></div>
 </div>
 </body>
