--- a/conf/index_cn.html
+++ b/conf/index_cn.html
@@ -31,7 +31,7 @@ font-family:微软雅黑,sans-serif;
 <p>问题反馈论坛：<a target="_blank" class="links" href="http://bbs.linuxeye.com">http://bbs.linuxeye.com</a></p>
 <p>LNMP最新源码一键安装脚本问题反馈请加QQ群： 235258658</p>
 <p><b>赞助我们:</b></p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;支付宝:&nbsp;&nbsp;lj2007331@163.com</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;支付宝:&nbsp;&nbsp;lj2007331@gmail.com</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PayPal:&nbsp;&nbsp;lj2007331@gmail.com</p>
 <div align="center"><h3><a href="http://blog.linuxeye.com/31.html" target="_blank">LNMP一键安装包</a> by <a href="http://blog.linuxeye.com/" target="_blank">Linux运维笔记</a></h3></div>
 </div>
