--- a/conf/index.html
+++ b/conf/index.html
@@ -32,6 +32,16 @@ font-family:"Microsoft YaHei",sans-serif;
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PayPal:&nbsp;&nbsp;lj2007331@gmail.com</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;alipay:&nbsp;&nbsp;lj2007331@gmail.com</p>
 <div align="center"><h3><a href="http://blog.linuxeye.com/31.html" target="_blank">LNMP stack</a> by <a href="http://blog.linuxeye.com/" target="_blank">LinuxEye</a></h3></div>
+<div align="center"><script type="text/javascript">
+    google_ad_client = "ca-pub-4157113266001782";
+    google_ad_slot = "1802960551";
+    google_ad_width = 468;
+    google_ad_height = 60;
+</script>
+<!-- index -->
+<script type="text/javascript"
+src="//pagead2.googlesyndication.com/pagead/show_ads.js">
+</script></div>
 </div>
 </body>
 </html>
