--- a/conf/index.html
+++ b/conf/index.html
@@ -4,7 +4,7 @@
 <title>LNMP and LAMP setup script</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="keywords" content="lnmp,lamp,lnmp stack,lamp stack">
-<meta name="description" content="A complete lnmp/lamp/lanmp setup script for CentOS/Redhat Debian and Ubuntu">
+<meta name="description" content="A complete lnmp/lamp/lnmpa setup script for CentOS/Redhat Debian and Ubuntu">
 <style type="text/css">
 <!--
 body {
@@ -24,24 +24,15 @@ font-family:"Microsoft YaHei",sans-serif;
 <div id="main">
 <br>
 <div align="center"><h2>Congratulations, LNMP a successful installation!<h2></div>
-<h3><a href="http://blog.linuxeye.com/31.html" target="_blank" class="links">LNMP stack</a> <a href="http://www.linuxeye.com/" target="_blank">Linux</a>+Nginx/Tengine+MySQL/MariaDB/Percona+PHP+Pureftpd+phpMyAdmin+redis+memcached+jemalloc/tcmalloc.<br></h3>
+<h3><a href="http://blog.linuxeye.com/31.html" target="_blank" class="links">LNMP stack</a> <a href="http://www.linuxeye.com/" target="_blank">Linux</a>+Nginx/Tengine+MySQL/MariaDB/Percona</br>+PHP+Pureftpd+phpMyAdmin+redis+memcached+jemalloc/tcmalloc.</h3>
 <p><b>Check environment:&nbsp;&nbsp;</b> </span><a href="/proberv.php" target="_blank" class="links">Proberv</a>  <a href="/phpinfo.php" target="_blank" class="links">phpinfo</a>  <a href="/ftp" target="_blank" class="links">FTP Manager</a> <a href="/xcache" target="_blank" class="links">xcache</a> <a href="/phpMyAdmin/" target="_blank" class="links">phpMyAdmin</a></p>
 <p><b>For feedback, questions, and to follow the progress of the project:&nbsp;&nbsp;</b> <a target="_blank" class="links" href="https://github.com/lj2007331/lnmp">https://github.com/lj2007331/lnmp</a></p>
 <p><b>Author email:&nbsp;&nbsp;</b><a class="email" href="mailto:lj2007331@gmail.com">lj2007331@gmail.com</a></p>
 <p><b>Donate:</b></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PayPal:&nbsp;&nbsp;lj2007331@gmail.com</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;alipay:&nbsp;&nbsp;lj2007331@gmail.com</p>
+<div align="center"><iframe src="http://blog.linuxeye.com/ad_buttom.html" width="475" frameborder="0" scrolling="no"></iframe></div>
 <div align="center"><h3><a href="http://blog.linuxeye.com/31.html" target="_blank">LNMP stack</a> by <a href="http://blog.linuxeye.com/" target="_blank">LinuxEye</a></h3></div>
-<div align="center"><script type="text/javascript">
-    google_ad_client = "ca-pub-4157113266001782";
-    google_ad_slot = "1802960551";
-    google_ad_width = 468;
-    google_ad_height = 60;
-</script>
-<!-- index -->
-<script type="text/javascript"
-src="//pagead2.googlesyndication.com/pagead/show_ads.js">
-</script></div>
 </div>
 </body>
 </html>
