--- a/conf/index_cn.html
+++ b/conf/index_cn.html
@@ -4,7 +4,7 @@
 <title>LNMP最新源码一键安装脚本</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="keywords" content="lnmp,lnmp一键安装包,一键安装包">
-<meta name="description" content="lnmp/lamp/lanmp一键安装包">
+<meta name="description" content="lnmp/lamp/lnmpa一键安装包">
 <style type="text/css">
 <!--
 body {
@@ -24,7 +24,7 @@ font-family:微软雅黑,sans-serif;
 <div id="main">
 <br>
 <div align="center"><h2>Congratulations, LNMP安装成功！<h2></div>
-<h3><a href="http://blog.linuxeye.com/31.html" target="_blank" class="links">LNMP最新源码一键安装脚本</a> <a href="http://www.linuxeye.com/" target="_blank">Linux</a>+Nginx/Tengine+MySQL/MariaDB/Percona+PHP+Pureftpd+phpMyAdmin+redis+memcached+jemalloc/tcmalloc，添加虚拟主机请执行vhost.sh脚本。脚本中用到的软件包大多最新稳定版本,修复了一些安全性问题（安装之前会执行<a target="_blank" href="http://blog.linuxeye.com/30.html">初始化安全脚本init.sh</a>）<br></h3>
+<h3><a href="http://blog.linuxeye.com/31.html" target="_blank" class="links">LNMP最新源码一键安装脚本</a> <a href="http://www.linuxeye.com/" target="_blank">Linux</a>+Nginx/Tengine+MySQL/MariaDB/Percona+PHP</br>+Pureftpd+phpMyAdmin+redis+memcached+jemalloc/tcmalloc，添加虚拟主机请执行vhost.sh脚本。脚本中用到的软件包大多最新稳定版本,修复了一些安全性问题。</h3>
 <p>更多LNMP最新源码一键安装脚本信息请访问： <a href="http://blog.linuxeye.com/31.html" target="_blank">http://blog.linuxeye.com/31.html</a></p>
 <p>查看本地环境：</span><a href="/tz.php" target="_blank" class="links">探针</a>  <a href="/phpinfo.php" target="_blank" class="links">phpinfo</a>  <a href="/ftp" target="_blank" class="links">FTP Manager</a> <a href="/xcache" target="_blank" class="links">xcache</a> <a href="/phpMyAdmin/" target="_blank" class="links">phpMyAdmin</a>(为了更安全，建议将ftp和phpMyAdmin目录重命名！)</p>
 <p>Github项目地址：<a target="_blank" class="links" href="https://github.com/lj2007331/lnmp">https://github.com/lj2007331/lnmp</a></p>
@@ -33,6 +33,7 @@ font-family:微软雅黑,sans-serif;
 <p><b>赞助我们:</b></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;支付宝:&nbsp;&nbsp;lj2007331@gmail.com</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PayPal:&nbsp;&nbsp;lj2007331@gmail.com</p>
+<div align="center"><iframe src="http://blog.linuxeye.com/ad_buttom.html" width="475" frameborder="0" scrolling="no"></iframe></div>
 <div align="center"><h3><a href="http://blog.linuxeye.com/31.html" target="_blank">LNMP一键安装包</a> by <a href="http://blog.linuxeye.com/" target="_blank">Linux运维笔记</a></h3></div>
 </div>
 </body>
