Changed mariadb-10.0 installation

--- a/conf/index_cn.html
+++ b/conf/index_cn.html
@@ -29,7 +29,7 @@ font-family:微软雅黑,sans-serif;
 <p>查看本地环境：</span><a href="/tz.php" target="_blank" class="links">探针</a>  <a href="/phpinfo.php" target="_blank" class="links">phpinfo</a>  <a href="/ftp" target="_blank" class="links">FTP Manager</a> <a href="/xcache" target="_blank" class="links">xcache</a> <a href="/phpMyAdmin/" target="_blank" class="links">phpMyAdmin</a>(为了更安全，建议将ftp和phpMyAdmin目录重命名！)</p>
 <p>Github项目地址：<a target="_blank" class="links" href="https://github.com/lj2007331/lnmp">https://github.com/lj2007331/lnmp</a></p>
 <p>问题反馈论坛：<a target="_blank" class="links" href="http://bbs.linuxeye.com">http://bbs.linuxeye.com</a></p>
-<p>LNMP最新源码一键安装脚本问题反馈请加QQ群： 235258658</p>
+<p>lnmp一键安装包脚本问题反馈请加QQ群：438311066(新) 235258658(满)</p>
 <p><b>赞助我们:</b></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;支付宝:&nbsp;&nbsp;lj2007331@gmail.com</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PayPal:&nbsp;&nbsp;lj2007331@gmail.com</p>
