Changed Pure-FTPd installation

--- a/conf/index_cn.html
+++ b/conf/index_cn.html
@@ -25,11 +25,12 @@ font-family:微软雅黑,sans-serif;
 <br>
 <div align="center"><h2>Congratulations, LNMP安装成功！<h2></div>
 <h3><a href="http://blog.linuxeye.com/31.html" target="_blank" class="links">LNMP最新源码一键安装脚本</a> <a href="http://www.linuxeye.com/" target="_blank">Linux</a>+Nginx/Tengine+MySQL/MariaDB/Percona+PHP</br>+Pureftpd+phpMyAdmin+redis+memcached+jemalloc/tcmalloc，添加虚拟主机请执行vhost.sh脚本。脚本中用到的软件包大多最新稳定版本,修复了一些安全性问题。</h3>
-<p>更多LNMP最新源码一键安装脚本信息请访问： <a href="http://blog.linuxeye.com/31.html" target="_blank">http://blog.linuxeye.com/31.html</a></p>
-<p>查看本地环境：</span><a href="/tz.php" target="_blank" class="links">探针</a>  <a href="/phpinfo.php" target="_blank" class="links">phpinfo</a>  <a href="/ftp" target="_blank" class="links">FTP Manager</a> <a href="/xcache" target="_blank" class="links">xcache</a> <a href="/phpMyAdmin/" target="_blank" class="links">phpMyAdmin</a>(为了更安全，建议将ftp和phpMyAdmin目录重命名！)</p>
-<p>Github项目地址：<a target="_blank" class="links" href="https://github.com/lj2007331/lnmp">https://github.com/lj2007331/lnmp</a></p>
-<p>问题反馈论坛：<a target="_blank" class="links" href="http://bbs.linuxeye.com">http://bbs.linuxeye.com</a></p>
-<p>lnmp一键安装包脚本问题反馈请加QQ群：438311066(新) 235258658(满)</p>
+<p><b>更多LNMP最新源码一键安装脚本信息请访问:</b>&nbsp;&nbsp;<a href="http://blog.linuxeye.com/31.html" target="_blank">http://blog.linuxeye.com/31.html</a></p>
+<p><b>查看本地环境:</b>&nbsp;&nbsp;</span><a href="/tz.php" target="_blank" class="links">探针</a>  <a href="/phpinfo.php" target="_blank" class="links">phpinfo</a><a href="/xcache" target="_blank" class="links">xcache</a> <a href="/phpMyAdmin/" target="_blank" class="links">phpMyAdmin</a>(为了更安全，建议phpMyAdmin目录重命名！)</p>
+<p><b>创建FTP虚拟账号执行脚本:</b>&nbsp;&nbsp;<font color="#008000">./pureftpd_vhost.sh</font></p>
+<p><b>Github项目地址:</b>&nbsp;&nbsp;<a target="_blank" class="links" href="https://github.com/lj2007331/lnmp">https://github.com/lj2007331/lnmp</a></p>
+<p><b>问题反馈论坛:</b>&nbsp;&nbsp;<a target="_blank" class="links" href="http://bbs.linuxeye.com">http://bbs.linuxeye.com</a></p>
+<p><b>lnmp一键安装包脚本问题反馈请加QQ群:</b>&nbsp;&nbsp;438311066(新) 235258658(满)</p>
 <p><b>赞助我们:</b></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;支付宝:&nbsp;&nbsp;lj2007331@gmail.com</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PayPal:&nbsp;&nbsp;lj2007331@gmail.com</p>
