--- a/conf/index.html
+++ b/conf/index.html
@@ -23,15 +23,15 @@ font-family:"Microsoft YaHei",sans-serif;
 <body>
 <div id="main">
 <br>
-<div align="center"><h2>Congratulations, LNMP a successful installation!<h2></div>
+<div align="center"><h2>Congratulations, LNMP a successful installation!</h2></div>
 <h3><a href="http://blog.linuxeye.com/31.html" target="_blank" class="links">LNMP stack</a> <a href="http://www.linuxeye.com/" target="_blank">Linux</a>+Nginx/Tengine+MySQL/MariaDB/Percona</br>+PHP+Pureftpd+phpMyAdmin+redis+memcached+jemalloc/tcmalloc.</h3>
-<p><b>Check environment:&nbsp;&nbsp;</b> </span><a href="/proberv.php" target="_blank" class="links">Proberv</a> <a href="/phpinfo.php" target="_blank" class="links">phpinfo</a> <a href="/xcache" target="_blank" class="links">xcache</a> <a href="/phpMyAdmin/" target="_blank" class="links">phpMyAdmin</a></p>
+<p><b>Check environment:&nbsp;&nbsp;</b><a href="/proberv.php" target="_blank" class="links">Proberv</a>&nbsp;<a href="/phpinfo.php" target="_blank" class="links">phpinfo</a>&nbsp;<a href="/xcache" target="_blank" class="links">xcache</a>&nbsp;<a href="/phpMyAdmin/" target="_blank" class="links">phpMyAdmin</a></p>
 <p><b>Create FTP virtual running script:</b>&nbsp;&nbsp;<font color="#008000">./pureftpd_vhost.sh</font></p>
 <p><b>For feedback, questions, and to follow the progress of the project:&nbsp;&nbsp;</b> <a target="_blank" class="links" href="https://github.com/lj2007331/lnmp">https://github.com/lj2007331/lnmp</a></p>
 <p><b>Author email:&nbsp;&nbsp;</b><a class="email" href="mailto:lj2007331@gmail.com">lj2007331@gmail.com</a></p>
 <p><b>Donate:</b></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PayPal:&nbsp;&nbsp;lj2007331@gmail.com</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;alipay:&nbsp;&nbsp;lj2007331@gmail.com</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;AliPay:&nbsp;&nbsp;lj2007331@gmail.com</p>
 <div align="center"><iframe src="http://blog.linuxeye.com/ad_buttom.html" width="475" frameborder="0" scrolling="no"></iframe></div>
 <div align="center"><h3><a href="http://blog.linuxeye.com/31.html" target="_blank">LNMP stack</a> by <a href="http://blog.linuxeye.com/" target="_blank">LinuxEye</a></h3></div>
 </div>
