--- a/config/index_cn.html
+++ b/config/index_cn.html
@@ -137,8 +137,7 @@
 	            <h1 class="h2" id="home">控制中心</h1>
 	            <div class="btn-toolbar mb-2 mb-md-0">
 	              <div class="btn-group mr-2">
-	                <a class="btn btn-sm btn-outline-primary btn_prober" href="prober.php" target="_blank"><span data-feather="compass"></span> prober</a>
-	                <a class="btn btn-sm btn-outline-primary btn_tz" href="tz.php" target="_blank"><span data-feather="compass"></span> 探针</a>
+	                <a class="btn btn-sm btn-outline-primary btn_prober" href="xprober.php" target="_blank"><span data-feather="compass"></span> 探针</a>
 	                <a class="btn btn-sm btn-outline-info btn_phpinfo" href="phpinfo.php" target="_blank"><span data-feather="info"></span> phpinfo</a>
 	                <a class="btn btn-sm btn-outline-secondary btn_op" href="ocp.php" target="_blank"><span data-feather="cpu"></span> Opcache</a>
 	              </div>
@@ -156,8 +155,7 @@
 		
 			<section class="section" id="tools_section">
 	          <h2 class="mt-5" id="tools">主机工具</h2>
-	          	<a class="btn btn-primary btn_tz" href="tz.php" target="_blank" role="button">探针</a>
-	          	<a class="btn btn-primary btn_prober" href="prober.php" target="_blank" role="button">prober</a>
+	          	<a class="btn btn-primary btn_prober" href="xprober.php" target="_blank" role="button">探针</a>
 	          	<a class="btn btn-info btn_phpinfo" href="phpinfo.php" target="_blank" role="button">phpinfo</a>
 	          	<a class="btn btn-success btn_pma" href="phpMyAdmin/" target="_blank" role="button">phpMyAdmin</a>
 	          	<a class="btn btn-secondary btn_op" href="ocp.php" target="_blank" role="button">Opcache</a>
@@ -177,7 +175,7 @@
 			              <li>DNSPOD</li>
 			              <li>Cloudflare</li>
 			            </ul>
-			            <a href="https://help.aliyun.com/document_detail/29716.html" target="_blank" type="button" class="btn btn-lg btn-block btn-primary">详细教程</a>
+			            <a href="https://help.aliyun.com/document_detail/29716.html" target="_blank" type="role" class="btn btn-lg btn-block btn-primary">详细教程</a>
 			          </div>
 			        </div>
 			        <div class="card mb-4 box-shadow">
@@ -191,7 +189,7 @@
 			              <li>删除虚拟主机 ./vhost.sh --del</li>
 			              <li>管理FTP账号 ./pureftpd_vhost.sh</li>
 			            </ul>
-			            <a href="https://oneinstack.com/install/" target="_blank" type="button" class="btn btn-lg btn-block btn-primary">详细教程</a>
+			            <a href="https://oneinstack.com/install/" target="_blank" type="role" class="btn btn-lg btn-block btn-primary">详细教程</a>
 			          </div>
 			        </div>
 			        <div class="card mb-4 box-shadow">
@@ -205,7 +203,7 @@
 			              <li>管理FTP账号 ./pureftpd_vhost.sh</li>
 			              <li>备份 ./backup_setup.sh</li>
 			            </ul>
-			            <a href="https://oneinstack.com/install/" target="_blank" type="button" class="btn btn-lg btn-block btn-primary">详细教程</a>
+			            <a href="https://oneinstack.com/install/" target="_blank" type="role" class="btn btn-lg btn-block btn-primary">详细教程</a>
 			          </div>
 			        </div>
 			      </div>
@@ -332,6 +330,6 @@
         </main>
       </div>
     </div>
-    <script src="https://static.oneinstack.com/assets/ois.js"></script>
+    <script src="https://static.oneinstack.com/assets/ois20190114.js"></script>
   </body>
 </html>
